# SOTA_HackEurope

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  clawwork-evaluation.md  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  start.sh  stop.sh  test_agents.py  test_execute.py  tsconfig.json  tsconfig.tsbuildinfo
agents/: .dockerignore  .env.example  .railwayignore  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.fleet  README.md  __init__.py  __main__.py  butler_api.py  clawbot_example.py  docker-compose.yml  event_finder.py  hackathon_sdk_agent.py  pyproject.toml  railway.fleet.toml  railway.toml  requirements.txt  run_all.py  simulate_1usdc_paid.py  sota_marketplace_idl.json  start.sh  test_cost_module.py  test_sota_sdk.py
agents/marketplace/: __init__.py  bidding.py  hub.py  models.py  registry.py  requirements.txt  router.py
agents/sota_sdk/: .env.example  __init__.py  agent.py  cli.py  config.py  models.py  preflight.py  pyproject.toml  server.py
agents/sota_sdk/chain/: __init__.py  contracts.py  registry.py  wallet.py
agents/sota_sdk/cost/: __init__.py  config.py  signals.py  tracker.py  wrappers.py
agents/sota_sdk/examples/: custom_bid_agent.py  echo_agent.py  llm_agent.py  tool_agent.py
agents/sota_sdk/marketplace/: __init__.py  bidding.py  client.py  registration.py
agents/sota_sdk/tools/: base.py  (+2 more)
agents/src/: __init__.py
agents/tests/: conftest.py  test_clawbot_fixes.py  test_e2e_agents.py  test_fun_activity_agent.py  test_hub_connector_paid.py  test_hub_unit.py  test_integration_lifecycle.py  test_integration_ws.py  test_sdk_agent_unit.py  test_sdk_bidding.py  test_sdk_cli.py  test_sdk_client.py  test_sdk_config.py  test_sdk_contracts.py  test_sdk_cost.py  test_sdk_models.py  test_sdk_preflight.py  test_sdk_registration.py  test_sdk_server.py  test_sdk_tools.py  test_sdk_ui.py  test_sdk_wallet.py  test_task_memory.py  test_third_party_agents.py
(+309 files in other folders)
