[project]
name = "sota-agents"
version = "0.2.0"
description = "SOTA Agents - AI Middleware Multi-Agent System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sota-sdk @ git+https://github.com/BabyBoss45/SOTA_SDK.git",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "pydantic>=2.9.0",
    "twilio>=9.3.0",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.0",
    "anthropic>=0.39.0",
    "sentence-transformers>=3.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "paid-python>=1.0.5",
    "solana>=0.34.0",
    "solders>=0.21.0",
    "anchorpy>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
